[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/menu_background.jpg" type="Texture" id=1]
[ext_resource path="res://src/menus/level_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/menu.tres" type="Theme" id=3]

[node name="level_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_background" type="TextureRect" parent="."]
margin_top = -100.0
margin_right = 1920.0
margin_bottom = 1146.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 100.0
margin_right = -100.0
margin_bottom = 1004.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_label" type="Label" parent="VBoxContainer"]
margin_right = 1720.0
margin_bottom = 72.0
text = "Levels"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level_box" type="MarginContainer" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 1720.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 380 )

[node name="level_list" type="GridContainer" parent="VBoxContainer/level_box"]
margin_right = 1720.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 6

[node name="challenge_label" type="Label" parent="VBoxContainer"]
margin_top = 492.0
margin_right = 1720.0
margin_bottom = 564.0
text = "Challenges"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="challenge_box" type="MarginContainer" parent="VBoxContainer"]
margin_top = 584.0
margin_right = 1720.0
margin_bottom = 964.0
rect_min_size = Vector2( 0, 380 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="challenge_list" type="GridContainer" parent="VBoxContainer/challenge_box"]
margin_right = 1720.0
margin_bottom = 380.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 6

[node name="quit_to_main" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -374.0
margin_top = -102.0
margin_right = 374.0
text = "Back to main menu"
__meta__ = {
"_edit_use_anchors_": false
}
